--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,26 +3,26 @@
     height: 80px;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-content: center;
     font-size: 1.2rem;
     position: sticky;
     top: 0;
     z-index: 999;
     padding-top:0;
+    padding-bottom:0;
   }
   
   .navbar-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80px;
+    height: 100%;
     max-width: 1500px;
   }
 
   @media screen and (min-width: 1180px) {
       .navbar-logo {
         margin-right:60px;
-        margin-bottom:15px;
       }
     }
   
@@ -48,7 +48,6 @@
     align-items:center;
     justify-content:center;
     overflow:hidden;
-    padding-top:1.5%;
   }
 
   .btn-signout {
@@ -72,6 +71,7 @@
     display:flex;
     flex-direction:row;
     justify-content:center;
+    align-items:center;
     height: 80px;
   }
   
